--- a/index.html
+++ b/index.html
@@ -380,10 +380,10 @@
 		<!--populer-products end-->
 
 		<!--new-arrivals start -->
-		<section id="new-arrivals" class="new-arrivals">
+		<section id="produk-kami" class="produk-kami">
 			<div class="container">
 				<div class="section-header">
-					<h2>new arrivals</h2>
+					<h2>Produk Kami</h2>
 				</div><!--/.section-header-->
 				<div class="new-arrivals-content">
 					<div class="row">
