--- a/index.html
+++ b/index.html
@@ -205,6 +205,8 @@
 				</div><!-- /.carousel-inner-->
 
 			</div><!--/#header-carousel-->
+			
+			<div id="ysDN6NCjzco"><script type="text/javascript" async data-short="ysDN6NCjzco" data-path="tours" width="100%" height="500px" src="https://app.cloudpano.com/public/shareScript.js"></script></div>
 
 			<!-- top-area Start -->
 			<div class="top-area">
