--- a/index.html
+++ b/index.html
@@ -206,6 +206,13 @@
 
 			</div><!--/#header-carousel-->
 			
+			<section id="feature" class="feature">
+			<div class="container">
+				<div class="section-header">
+					<h2>VIRTUAL ROOM TOUR</h2>
+				</div><!--/.section-header-->
+				<div class="feature-content">
+			
 			<div id="ysDN6NCjzco"><script type="text/javascript" async data-short="ysDN6NCjzco" data-path="tours" width="100%" height="500px" src="https://app.cloudpano.com/public/shareScript.js"></script></div>
 
 			<!-- top-area Start -->
